# my_first_cmake_project2

./: CMakeLists.txt  class_parallelogram.cpp  source.cpp
