cmake_minimum_required(VERSION 3.22.0)
project(my_first_cmake_project2)
add_executable(hello_cmake source.cpp class_figure.h class_figure.cpp class_triangle.cpp class_triangle.h class_right_triangle.cpp class_right_triangle.h
class_isosceles_triangle.cpp class_isosceles_triangle.h class_equilateral_triangle.cpp class_equilateral_triangle.h class_quadrangle.cpp class_quadrangle.h
class_rectangle1.cpp class_rectangle1.h square.cpp square.h class_parallelogram.cpp class_parallelogram.h rhombus.cpp rhombus.h)